--- a/isso/files/isso.supervisord.conf
+++ b/isso/files/isso.supervisord.conf
@@ -1,5 +1,5 @@
 [program:isso]
-command = {{ isso.path }}/local/bin/isso -c {{ isso.path }}/etc/isso.conf run
+command = {{ isso.path }}/bin/isso -c {{ isso.path }}/etc/isso.conf run
 user = {{ isso.user }}
 autostart = true
 autorestart = true
